deploy/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: ${NAMESPACE}
spec:
  selector:
    app: webapp
  ports:
  - appProtocol: http
    name: http-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
---
