deploy/frontend/dr.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: webapp
  namespace: ${NAMESPACE}
spec:
  host: webapp.${NAMESPACE}.svc.cluster.local 
  subsets:
  - name: v1
    labels:
      version: v1
